# upel_attendance_bot

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  codeql.yml
src/: main.cpp  state.cpp  state.hpp
